--- a/node-back/package.json
+++ b/node-back/package.json
@@ -4,13 +4,21 @@
   "description": "Backend for the application Viki",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js",
+    "server": "nodemon index.js",
+    "client" :" npm start --prefix ../react-front",
+    "dev" : "concurrently   \"npm run server\" \"npm run client\""
   },
   "author": "r:",
   "license": "ISC",
   "dependencies": {
+    "concurrently": "^4.0.1",
     "cors": "^2.8.4",
-    "express": "^4.16.3",
+    "express": "^4.16.4",
     "mysql": "^2.16.0"
+  },
+  "devDependencies": {
+    "nodemon": "^1.18.4"
   }
 }
