--- a/node-back/package.json
+++ b/node-back/package.json
@@ -7,12 +7,13 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js",
     "server": "nodemon index.js",
-    "client" :" npm start --prefix ../react-front",
-    "dev" : "concurrently   \"npm run server\" \"npm run client\""
+    "client": " npm start --prefix ../react-front",
+    "dev": "concurrently   \"npm run server\" \"npm run client\""
   },
   "author": "r:",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.18.3",
     "concurrently": "^4.0.1",
     "cors": "^2.8.4",
     "express": "^4.16.4",
