--- a/node-back/package.json
+++ b/node-back/package.json
@@ -17,6 +17,7 @@
     "concurrently": "^4.0.1",
     "cors": "^2.8.4",
     "express": "^4.16.4",
+    "express-session": "^1.15.6",
     "mysql": "^2.16.0"
   },
   "devDependencies": {
