--- a/node-back/package.json
+++ b/node-back/package.json
@@ -13,11 +13,12 @@
   "author": "r:",
   "license": "ISC",
   "dependencies": {
-    "body-parser": "^1.18.3",
+    "body-parser": "*",
     "concurrently": "^4.0.1",
     "cors": "^2.8.4",
     "express": "^4.16.4",
     "express-session": "^1.15.6",
+    "mongoose": "^5.3.14",
     "mysql": "^2.16.0"
   },
   "devDependencies": {
