--- a/react-front/package.json
+++ b/react-front/package.json
@@ -4,8 +4,11 @@
   "private": true,
   "dependencies": {
     "axios": "^0.18.0",
+    "create-react-class": "^15.6.3",
     "react": "^16.5.2",
+    "react-16-bootstrap-date-picker": "^5.1.2",
     "react-bootstrap": "^0.32.4",
+    "react-bootstrap-date-picker": "^5.1.0",
     "react-dom": "^16.5.2",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.0.3"
@@ -16,7 +19,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  "proxy": "http://localhost:5000",
+  "proxy": "http://localhost:5000/",
   "eslintConfig": {
     "extends": "react-app"
   },
