--- a/.gitignore
+++ b/.gitignore
@@ -3,4 +3,5 @@ react-front/node_modules/
 node-back/node_modules/
 node-back/config/sql.js
 chatastrophe
-
+Visu/node-back/node_modules/
+Visu/react-front/node_modules/
