--- a/Visu/node-back/package.json
+++ b/Visu/node-back/package.json
@@ -19,7 +19,9 @@
     "express": "^4.16.4",
     "express-session": "^1.15.6",
     "mongoose": "^5.3.14",
-    "mysql": "^2.16.0"
+    "mysql": "^2.16.0",
+    "sqljs": "0.0.0-6",
+    "xlsx": "^0.14.1"
   },
   "devDependencies": {
     "nodemon": "^1.18.4"
