--- a/Visu/react-front/package.json
+++ b/Visu/react-front/package.json
@@ -9,11 +9,14 @@
     "create-react-class": "^15.6.3",
     "react": "^16.5.2",
     "react-16-bootstrap-date-picker": "^5.1.2",
+    "react-autocomplete": "^1.8.1",
+    "react-autosuggest": "^9.4.3",
     "react-bootstrap": "^0.32.4",
     "react-bootstrap-date-picker": "^5.1.0",
     "react-dom": "^16.5.2",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "2.0.3",
+    "react-scripts": "^2.1.3",
+    "react-select": "^2.2.0",
     "typeface-roboto": "0.0.54"
   },
   "scripts": {
