--- a/node-back/package.json
+++ b/node-back/package.json
@@ -21,7 +21,8 @@
     "express-session": "^1.15.6",
     "material-ui": "^0.20.2",
     "mongoose": "^5.3.14",
-    "mysql": "^2.16.0"
+    "mysql": "^2.16.0",
+    "xlsx": "^0.14.1"
   },
   "devDependencies": {
     "nodemon": "^1.18.4"
