--- a/react-front/package.json
+++ b/react-front/package.json
@@ -13,6 +13,7 @@
     "react-bootstrap": "^0.32.4",
     "react-bootstrap-date-picker": "^5.1.0",
     "react-dom": "^16.5.2",
+    "react-js-pagination": "^3.0.2",
     "react-router-dom": "^4.3.1",
     "react-scripts": "^2.1.3",
     "typeface-roboto": "0.0.54"
