--- a/node-back/package.json
+++ b/node-back/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "@material-ui/core": "^3.8.3",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
     "concurrently": "^4.0.1",
     "cors": "^2.8.4",
